[package]
name = "hlrs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
notify = "6.1.1"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tower-livereload = "0.9.1"
mimalloc = { version = "0.1.37", default-features = false }
